RESOLVED FIXED190928
[LFC][IFC] Find floating constraints for a given vertical position
https://bugs.webkit.org/show_bug.cgi?id=190928
Summary [LFC][IFC] Find floating constraints for a given vertical position
alan
Reported 2018-10-25 16:19:38 PDT
ssia.
Attachments
Patch (4.25 KB, patch)
2018-10-25 16:26 PDT, alan
koivisto: review+
alan
Comment 1 2018-10-25 16:26:57 PDT
EWS Watchlist
Comment 2 2018-10-26 07:23:57 PDT
Attachment 353128 [details] did not pass style-queue: ERROR: Source/WebCore/layout/floats/FloatingState.cpp:126: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebCore/layout/floats/FloatingState.cpp:132: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
alan
Comment 3 2018-10-26 07:29:29 PDT
Radar WebKit Bug Importer
Comment 4 2018-10-26 07:30:51 PDT
Note You need to log in before you can comment on or make changes to this bug.